[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-introspection"
version = "0.1.0"
description = "Quantitative performance metrics for Hermes agent sessions"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Researchoors", email = "hankbobtheresearchoor@gmail.com"},
]
dependencies = []

[project.scripts]
hermes-introspect = "hermes_introspection.__main__:main"

[tool.setuptools.packages.find]
include = ["hermes_introspection*"]
